# rdpwrap-offset-finder-py

./: .gitignore  PORTING_NOTES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/rdpwrap_offset_finder/: __init__.py  autoupdate.py  cli.py  disasm.py  errors.py  models.py  nosymbol.py  patches.py  pe_image.py  symbols.py
src/rdpwrap_offset_finder/resources/: rdpwrap_template.ini
tests/: test_autoupdate.py  test_disasm.py  test_imports_and_cli.py  test_patches.py
