[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rdpwrap-offset-finder"
version = "0.1.0"
description = "Python port of llccd/RDPWrapOffsetFinder for generating RDP Wrapper offsets"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "llccd and contributors" },
  { name = "Python port contributors" },
]
dependencies = [
  "pefile>=2023.2.7",
  "capstone>=5.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
rdpwrap-offset-finder = "rdpwrap_offset_finder.cli:main"
rdpwrap-offset-update = "rdpwrap_offset_finder.autoupdate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rdpwrap_offset_finder = ["resources/*.ini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
